<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="441dp"
        android:layout_height="262dp"
        app:srcCompat="@drawable/icono_ipublicity2" />

    <TextView
        android:id="@+id/TextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/editxt_enviarte"
        android:textColor="@color/color_Black" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <Button
        android:id="@+id/startReadingBeaconsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_button_text"
        android:background="@drawable/btn_redondeado_blanco"
        android:backgroundTint="#2196F3"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/stopReadingBeaconsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_button_text"
        android:background="@drawable/btn_redondeado_blanco"
        android:backgroundTint="#2196F3"
        android:textSize="18sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/permitir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_permitir"
        android:onClick="Permitir"
        android:background="@drawable/btn_redondeado_blanco"
        android:backgroundTint="#2196F3"
        android:textSize="18sp" />

</LinearLayout>