<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondos"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#d8000000">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:layout_weight="1"
                android:src="@drawable/promotionsicono" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="206dp"
                    android:layout_height="211dp"
                    android:layout_weight="1"
                    android:src="@drawable/perfil" />

                <TextView
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:text="@string/txt_bienvenida"
                    android:textColor="@color/write" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/textnameeee"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:text="@string/label_usuario"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Maria Hernandez Carrillo"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/textnameeeee"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:text="@string/label_fecha_nac"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/textViewNac"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="14-09-1998"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/textnameeeeee"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:text="@string/label_cod_postal"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/textViewCP"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="20263"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/editTextTextEmailAddress6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="     @string/txt_cupones"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/cupon"
                />/android:tint="#FFFFFF" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/cupon"
               />/ android:tint="#BC1414" />

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/cupon"
              />/  android:tint="#FFFFFF" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="TextView" />

        <Button
            android:id="@+id/btn_edi3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_fondo_color"
            android:backgroundTint="@color/quemado"
            android:elevation="5dp"
            android:text="@string/btn_cerrarSesion"
            android:textColor="#fff"
            android:textSize="16sp"></Button>

    </LinearLayout>

</RelativeLayout>